# QwirkleInC

./: .gitignore  Cahier_des_charges.md  Makefile  README.md  coverage.info
CMocka/cmocka-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  config.h  install_manifest.txt
Doxygen/: doxygen_log.txt
Doxygen/html/: affichage__plateau_8c.html  affichage__plateau_8h.html  affichage__plateau_8h_source.html  affichage__sdl_8c.html  affichage__sdl_8h.html  affichage__sdl_8h_source.html  annotated.html  classes.html  controleur_8c.html  controleur_8h.html  controleur_8h_source.html  dir_45f072825b88bc23c24dd5d2ba2dfa84.html  dir_79ea8c2fd6568fc1fc8ca9b3f8e944ba.html  dir_fbb7337c94bb290becee15335bf13b7b.html  files.html  functions.html  functions_vars.html  gestion_sac_8c.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_c.html  globals_func_d.html  (+71 more)
Qwirkle/: CMakeLists.txt  Doxyfile  Qwirkle.cbp  main.c
Qwirkle/Controleur/: controleur.c  controleur.h  message.c  message.h  respectRegles.c  respectRegles.h
Qwirkle/Modele/: gestionSac.c  joueur.c  joueur.h  partie.c  partie.h  plateau.c  plateau.h  regle.c  regle.h  score.c  score.h  test.h  test_gestionSac.c  test_joueur.c  test_partie.c  test_plateau.c  test_regle.c  test_score.c  test_tuile.c  tuile.c  tuile.h
Qwirkle/Vue/: affichage_plateau.c  affichage_plateau.h  affichage_sdl.c  affichage_sdl.h
(+106 files in other folders)
